# SpinChainsCUDA

./: CMakeLists.txt  CommonLibs.h  GlobalVariables.cpp  GlobalVariables.h  Numerical_Methods_Class.cu  Numerical_Methods_Class.cuh  Numerical_Methods_Class_backup.cpp  Numerical_Methods_Class_backup.h  SpinChainEigenSolverClass.cpp  SpinChainEigenSolverClass.h  example_kernel.cu  linspace.cpp  linspace.h  main.cu  progressbar.hpp
